Don't redirect to /pkgs every time; fix layout
This was happening because we were asking to `goHome()` whenever sign-in
happened, even when it wasn't supposed to.

I also inserted a stray `i` (thanks, Vim) when fixing the copyright messages,
which messed up the layout. This has been removed.

--- a/web/app/side-nav/_side-nav.scss
+++ b/web/app/side-nav/_side-nav.scss
@@ -5,7 +5,7 @@
 // the Software until such time that the Software is made available under an
 // open source license such as the Apache 2.0 License.
 
-i.hab-side-nav {
+.hab-side-nav {
   @include span-columns(2);
 
   .switcher {
